modified:   tarea 4.ipynb

--- a/tarea 4.ipynb
+++ b/tarea 4.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1caea751",
+   "metadata": {},
+   "source": [
+    "Tarea 4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "id": "cc02233d",
    "metadata": {},
    "outputs": [
@@ -31,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 2,
    "id": "6d4c4dc3",
    "metadata": {},
    "outputs": [],
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "id": "c37574a4",
    "metadata": {},
    "outputs": [
@@ -178,7 +186,7 @@
        "4  1930-07-15       Argentina  Francia               1               0  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "id": "fe652206",
    "metadata": {},
    "outputs": [
@@ -318,7 +326,7 @@
        "813               0               0  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "id": "cdbeb356",
    "metadata": {},
    "outputs": [
@@ -508,7 +516,7 @@
        "891       Inglaterra               3               4  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "id": "804c542d",
    "metadata": {},
    "outputs": [
@@ -552,12 +560,12 @@
    "id": "8a45f142",
    "metadata": {},
    "source": [
-    "Vamos a mostrar que pais ha estado en mas mundiales"
+    "Vamos a mostrar que país ha estado en más mundiales"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 7,
    "id": "d60681a3",
    "metadata": {},
    "outputs": [
@@ -567,7 +575,7 @@
        "4"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "id": "e1f70afd",
    "metadata": {},
    "outputs": [
@@ -589,7 +597,7 @@
        "8"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "id": "9ab104a8",
    "metadata": {},
    "outputs": [
@@ -630,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "id": "d43d21ff",
    "metadata": {},
    "outputs": [
@@ -659,34 +667,10 @@
     "eje.set_xlabel('Año')\n",
     "eje2.set_xlabel('Año')\n",
     "eje.set_ylabel('Goles en partidos')\n",
+    "\n",
+    "#Guardar grafico\n",
     "plt.savefig('Goles.png')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b665134",
-   "metadata": {},
-   "source": [
-    "Guardar el gráfico anterior"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "id": "19c610d5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
